stuff/podman-k8s/examples/httpbin-double-config/httpbin-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin-a
  name: httpbin-a
  namespace: httpbin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin-a
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: httpbin-a
    app.kubernetes.io/version: v11
  name: httpbin-a
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-a
      version: v11
  template:
    metadata:
      labels:
        app: httpbin-a
        version: v11
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin:latest
          imagePullPolicy: IfNotPresent
          name: httpbin-a
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin-b
  name: httpbin-b
  namespace: httpbin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: httpbin-b
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: httpbin-b
    app.kubernetes.io/version: v11
  name: httpbin-b
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-b
      version: v11
  template:
    metadata:
      labels:
        app: httpbin-b
        version: v11
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin:latest
          imagePullPolicy: IfNotPresent
          name: httpbin-b
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - protocol: HTTP
      port: 80
      name: httpbin
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: httpbin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
    - name: httpbin
      namespace: istio-system
  rules:
    - backendRefs:
        - name: httpbin-a
          port: 80
